# Compass-ATM-

./: .gitignore  HANDOFF.md
starter/: .gitignore  CLAUDE.md  STATE.md  docker-compose.dev.yml
starter/backend/: Dockerfile  eval_results.json  eval_results_hyde.json  eval_results_no_hyde.json  main.py  prompts.py  pyproject.toml  rag.py
starter/backend/scripts/: build_index.py  eval.py
starter/frontend/: REDESIGN_PLAN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
starter/frontend/src/: App.tsx  index.css
